[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Prefabs/Enemy/Enemy3.tscn" type="PackedScene" id=1]
[ext_resource path="res://Graphics/Items/powerup_wallpass.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Enemy/ShootingMonster.gd" type="Script" id=3]

[sub_resource type="AnimationNodeStateMachinePlayback" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 129.91

[node name="ShootingMonster" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Sprite" parent="FlipComponents" index="0"]
position = Vector2( 0, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )

[node name="AnimationTree" parent="FlipComponents" index="2"]
parameters/playback = SubResource( 2 )

[node name="Body" parent="." index="1"]
position = Vector2( 0, 0 )

[node name="ChasingArea" type="Area2D" parent="." index="4"]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChasingArea" index="0"]
shape = SubResource( 1 )

[node name="ShootCoolDown" type="Timer" parent="." index="5"]
autostart = true
[connection signal="body_entered" from="ChasingArea" to="." method="_on_ChasingArea_body_entered"]
[connection signal="body_exited" from="ChasingArea" to="." method="_on_ChasingArea_body_exited"]
[connection signal="timeout" from="ShootCoolDown" to="." method="_on_ShootCoolDown_timeout"]
